--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content=
     "initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>读书分享</title>
+  <title>谈笑有鸿儒</title>
 </head>
  
 <body>
